<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkboxhello"/>
    <CheckBox 
        android:id="@+id/CheckBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/football"/>
    <CheckBox 
        android:id="@+id/CheckBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song"/>
    <CheckBox 
        android:id="@+id/CheckBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book"/>

</LinearLayout>