<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/radiohello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"/>
    
    <RadioGroup  
        android:id="@+id/radiogroup1"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:orientation="vertical"  
        android:layout_x="3px"  
    >  
        <RadioButton  
            android:id="@+id/radiobutton1"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:text="@string/football"  
        />  
        <RadioButton  
            android:id="@+id/radiobutton2"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:text="@string/bascketball"  
        />  
        <RadioButton  
            android:id="@+id/radiobutton3"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:text="@string/badminton"  
        />  
    </RadioGroup>  
    

</LinearLayout>